# welpai-project

./: LICENSE  README.md  pyproject.toml
src/welpai/: __init__.py  cli.py  core.py
